fix: unecessary gap on win ver

--- a/windows/userChrome.css
+++ b/windows/userChrome.css
@@ -249,7 +249,7 @@ toolbar#TabsToolbar {
 }
    
 #nav-bar #PanelUI-button #PanelUI-menu-button {
-   margin-right: 50px !important;
+   margin-right: 2px !important;
    margin-left: 2px !important;
 }
 
